# idl/generated/swagger/pb/family/todos/todos.swagger.json
@@ -15,7 +15,7 @@
     "application/json"
   ],
   "paths": {
-    "/v1/todogroups": {
+    "/v1/todo-groups": {
       "get": {
         "operationId": "ListTodoGroups",
         "responses": {
@@ -37,9 +37,34 @@
         "tags": [
           "TodosService"
         ]
+      },
+      "post": {
+        "summary": "TodoGruops",
+        "operationId": "CreateTodoGroup",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/todosCreateTodoGroupResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/todosCreateTodoGroupRequest"
+            }
+          }
+        ],
+        "tags": [
+          "TodosService"
+        ]
       }
     },
-    "/v1/todogroups/{todo_group_id}": {
+    "/v1/todo-groups/{todo_group_id}": {
       "get": {
         "operationId": "GetTodoGroup",
         "responses": {
@@ -67,9 +92,67 @@
         "tags": [
           "TodosService"
         ]
+      },
+      "delete": {
+        "operationId": "DeleteTodoGroup",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/todosDeleteTodoGroupResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "todo_group_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "account_id",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "TodosService"
+        ]
+      },
+      "put": {
+        "operationId": "UpdateTodoGroup",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/todosUpdateTodoGroupResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "todo_group_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/todosUpdateTodoGroupRequest"
+            }
+          }
+        ],
+        "tags": [
+          "TodosService"
+        ]
       }
     },
-    "/v1/todogroups/{todo_group_id}/todos": {
+    "/v1/todo-groups/{todo_group_id}/todos": {
       "post": {
         "summary": "Todos",
         "operationId": "CreateTodo",
@@ -102,7 +185,7 @@
         ]
       }
     },
-    "/v1/todogroups/{todo_group_id}/todos/{todo_id}": {
+    "/v1/todo-groups/{todo_group_id}/todos/{todo_id}": {
       "delete": {
         "operationId": "DeleteTodo",
         "responses": {
@@ -166,93 +249,6 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/todosUpdateTodoRequest"
-            }
-          }
-        ],
-        "tags": [
-          "TodosService"
-        ]
-      }
-    },
-    "/v1/todosgroups": {
-      "post": {
-        "summary": "TodoGruops",
-        "operationId": "CreateTodoGroup",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/todosCreateTodoGroupResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/todosCreateTodoGroupRequest"
-            }
-          }
-        ],
-        "tags": [
-          "TodosService"
-        ]
-      }
-    },
-    "/v1/todosgroups/{todo_group_id}": {
-      "delete": {
-        "operationId": "DeleteTodoGroup",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/todosDeleteTodoGroupResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "todo_group_id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "account_id",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "TodosService"
-        ]
-      },
-      "put": {
-        "operationId": "UpdateTodoGroup",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/todosUpdateTodoGroupResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "todo_group_id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/todosUpdateTodoGroupRequest"
             }
           }
         ],
@@ -332,6 +328,26 @@
         }
       }
     },
+    "todosPriority": {
+      "type": "string",
+      "enum": [
+        "NONE",
+        "LOW",
+        "MEDIUM",
+        "HIGH",
+        "URGENT"
+      ],
+      "default": "NONE"
+    },
+    "todosStatus": {
+      "type": "string",
+      "enum": [
+        "TODO",
+        "DONE",
+        "PENDING"
+      ],
+      "default": "TODO"
+    },
     "todosTodo": {
       "type": "object",
       "properties": {
@@ -347,16 +363,27 @@
         "description": {
           "type": "string"
         },
-        "type": {
-          "$ref": "#/definitions/todosTodoType"
+        "status": {
+          "$ref": "#/definitions/todosStatus"
         },
         "created_at": {
+          "type": "string",
+          "format": "int64"
+        },
+        "updated_at": {
           "type": "string",
           "format": "int64"
         },
         "done_at": {
           "type": "string",
           "format": "int64"
+        },
+        "due_at": {
+          "type": "string",
+          "format": "int64"
+        },
+        "priority": {
+          "$ref": "#/definitions/todosPriority"
         }
       }
     },
@@ -372,10 +399,10 @@
         "description": {
           "type": "string"
         },
-        "todos": {
+        "ordered_todo_ids": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/todosTodo"
+            "type": "string"
           }
         },
         "created_by": {
@@ -388,35 +415,8 @@
         "updated_at": {
           "type": "string",
           "format": "int64"
-        },
-        "owners": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "editor": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "viewer": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
         }
       }
-    },
-    "todosTodoType": {
-      "type": "string",
-      "enum": [
-        "TODO",
-        "DONE",
-        "PENDING"
-      ],
-      "default": "TODO"
     },
     "todosUpdateTodoGroupRequest": {
       "type": "object",
